sessions/21/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: test
spec:
  selector:
    name: app
  ports:
  - port: 80
    targetPort: http
    name: http
  type: ClusterIP
