sessions/21/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - test.local
  #   secretName: tls-secret
  rules:
  - host: test.local
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              # number: 80
              name: http
